--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
           name: examples
           path:  |
             target/release/examples/*
-            !target/release/examples/*d
+            !target/release/examples/*.d
             !target/release/examples/*-*
 
   fmt:
@@ -97,7 +97,7 @@ jobs:
           example_get_storage,
           #            example_print_metadata, // Todo: metadata print needs revamp: #179.
           example_sudo,
-          example_transfer,
+          example_transfer_using_seed,
         ]
     steps:
       - uses: actions/checkout@v3
