Update node api to match recent version of substrate and subxt (#309)
* udpate metadata according to subxt

* fix clippy

* add decoder

* add event file and move to separate folder

* remove deprecated events

* fix clippy

* adapt wait_for_event functions

* update examples

* fix compile errors

* fix clippy

* taplo fmt

* fix no_std buil

* add licencse to cargo.toml

* udpate headers

* adapt header

* fix example build

* add unwrap for option

* fix example callback

* fix it once again

* fix test and doc

* update comment in example

* make examples more strict

* add exmaple to CI

* lets see what CI does

* add either to std import

* fix cargo.toml

* fix clippy

* fix clippy

* cargo fmt

* use multithreading in example

* add error log (temp)

* return error upon failed xt

* make example error better for testing

* fix examples

* add error log(tmp)

* fix examples

* fix check

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,13 +89,13 @@ jobs:
           example_benchmark_bulk_xt,
           example_compose_extrinsic_offline,
           example_event_callback,
-          #            example_generic_event_callback, does not work without somebody executing a transfer. So we don't run it.
-          #            example_event_error_details , Todo: this example hangs: #134
+          example_generic_event_callback,
+          example_event_error_details,
           example_generic_extrinsic,
           example_get_blocks,
           example_get_existential_deposit,
           example_get_storage,
-          #            example_print_metadata, // Todo: metadata print needs revamp: #179.
+          example_print_metadata,
           example_sudo,
           example_transfer_using_seed,
         ]
