Let future status return FutureError instead of misleading HexError (#312)
* fix error message

make Example a little nicer

add custom_nonce example

fix example

nicer error message

nicer error message

fix clippy

fix example

add error message

remove error logs. Logs are already printed when error is retunred

return error and options

fix examples

fix doc and RrpcClientError

* fix rebase error

* fix docs

* make more generic and fix event unwraps

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,6 +88,7 @@ jobs:
         example: [
           example_benchmark_bulk_xt,
           example_compose_extrinsic_offline,
+          example_custom_nonce,
           example_event_callback,
           example_event_error_details,
           example_generic_event_callback,
