--- a/compose-macros/Cargo.toml
+++ b/compose-macros/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ['derive'] }
 log = { version = "0.4.14", default-features = false }
 
-# substrate dependencies
+# substrate
 sp-core = { version = "6.0.0", default-features = false, features = ["full_crypto"], git = "https://github.com/paritytech/substrate.git", branch = "master" }
 sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
 sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
@@ -17,7 +17,7 @@ sp-std = { version = "4.0.0-dev", default-features = false, git = "https://githu
 # need to add this for the app_crypto macro
 sp-application-crypto = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", features = ["full_crypto"], branch = "master" }
 
-# local deps
+# local
 ac-primitives = { path = "../primitives", default-features = false }
 
 [features]
@@ -25,10 +25,11 @@ default = ["std"]
 std = [
     "codec/std",
     "log/std",
-    "sp-application-crypto/std",
+    # substrate
     "sp-core/std",
     "sp-runtime/std",
     "sp-std/std",
-    # local crates
+    "sp-application-crypto/std",
+    # local
     "ac-primitives/std",
 ]
