--- a/node-api/Cargo.toml
+++ b/node-api/Cargo.toml
@@ -4,26 +4,25 @@ version = "0.1.0"
 license = "Apache-2.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 bitvec = { version = "1.0.0", default-features = false, features = ["alloc"] }
 codec = { package = "parity-scale-codec", version = "3.2.1", features = ["derive", "bit-vec"], default-features = false }
 derive_more = { version = "0.99.17" }
 either = { version = "1.6.1", default-features = false }
-#TODO get from parity when our changes are accepted https://github.com/scs/substrate-api-client/issues/304
-frame-metadata = { version = "15.0.0", default-features = false, git = "https://github.com/integritee-network/frame-metadata", features = ["v14", "full_derive"] }
-#frame-metadata = { version = "15.0.0", features = ["v14"], default-features = false }
 hex = { version = "0.4.3", default-features = false }
 log = { version = "0.4.14", default-features = false }
 scale-info = { version = "2.0.1", features = ["derive", "decode", "bitvec"], default-features = false }
 serde = { version = "1.0.136", features = ["derive"], default-features = false }
 serde_json = { version = "1.0.79", default-features = false, features = ["alloc"] }
 
-# local deps
+#TODO get from parity when our changes are accepted https://github.com/scs/substrate-api-client/issues/304
+frame-metadata = { version = "15.0.0", default-features = false, git = "https://github.com/integritee-network/frame-metadata", features = ["v14", "full_derive"] }
+#frame-metadata = { version = "15.0.0", features = ["v14"], default-features = false }
+
+# local
 ac-primitives = { path = "../primitives", default-features = false }
 
-# substrate deps
+# substrate
 frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
 frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
 sp-core = { version = "6.0.0", default-features = false, features = ["full_crypto"], git = "https://github.com/paritytech/substrate.git", branch = "master" }
@@ -44,20 +43,20 @@ std = [
     "bitvec/std",
     "codec/std",
     "either/default",
-    "frame-metadata/std",
     "hex/std",
     "log/std",
     "scale-info/std",
     "serde/std",
     "serde_json/std",
-    # local deps
+    "frame-metadata/std",
+    # local
     "ac-primitives/std",
-    # substrate-deps
+    # substrate
     "frame-support/std",
     "frame-system/std",
     "sp-core/std",
-    "sp-std/std",
     "sp-runtime/std",
+    "sp-std/std",
     # no_std support
     "sp-application-crypto/std",
     "sp-runtime-interface/std",
