--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ['derive'] }
 hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
 
+# substrate
 sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
 sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
 sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
@@ -18,6 +19,7 @@ default = ["std"]
 std = [
     "codec/std",
     "hex/std",
+    # substrate
     "sp-core/std",
     "sp-runtime/std",
     "sp-std/std",
