--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -10,6 +10,8 @@ codec = { package = "parity-scale-codec", version = "3.0.0", default-features = 
 hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
 
 # substrate
+frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
+pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
 sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
 sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
 sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
@@ -20,6 +22,8 @@ std = [
     "codec/std",
     "hex/std",
     # substrate
+    "frame-system/std",
+    "pallet-balances/std",
     "sp-core/std",
     "sp-runtime/std",
     "sp-std/std",
