--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,11 +23,9 @@ serde = { version = "1.0.136", optional = true, features = ["derive"] }
 serde_json = { version = "1.0.79", optional = true }
 thiserror = { version = "1.0.30", optional = true }
 ws = { version = "0.9.2", optional = true, features = ["ssl"] }
-#TODO get from parity when our changes are accepted
-frame-metadata = { version = "15.0.0", default-features = false, git = "https://github.com/integritee-network/frame-metadata", features = ["v14", "full_derive"] }
-#frame-metadata = { version = "15.0.0", default-features = false, features = ["v14"] }
 
 # Substrate dependencies
+frame-metadata = { default-features = false, git = "https://github.com/paritytech/frame-metadata", features = ["v14", "serde_full", "decode"] }
 frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
 frame-system = { optional = true, git = "https://github.com/paritytech/substrate.git", branch = "master" }
 pallet-balances = { optional = true, git = "https://github.com/paritytech/substrate.git", branch = "master" }
@@ -67,8 +65,8 @@ std = [
     "serde/std",
     "serde_json",
     "thiserror",
-    "frame-metadata/std",
     # substrate
+    "frame-metadata/std",
     "frame-support/std",
     "frame-system",
     "pallet-balances",
@@ -86,7 +84,3 @@ std = [
 ]
 ws-client = ["ws"]
 staking-xt = ["std", "pallet-staking"]
-
-# Remove when fixed: https://github.com/scs/substrate-api-client/issues/286
-[patch.crates-io]
-ed25519-zebra = { git = "https://github.com/ZcashFoundation/ed25519-zebra", branch = "main" }
