--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,8 @@ primitive-types = { version = "0.12.1", optional = true, features = ["codec"] }
 serde = { version = "1.0.136", default-features = false, features = ["derive"] }
 serde_json = { version = "1.0.79", default-features = false }
 thiserror = { version = "1.0.30", optional = true }
+tungstenite = { version = "0.18.0", optional = true, features = ["native-tls"] }
+url = { verson = "2.0.0", optional = true }
 ws = { version = "0.9.2", optional = true, features = ["ssl"] }
 
 # Substrate dependencies
@@ -64,6 +66,7 @@ std = [
     "serde/std",
     "serde_json/std",
     "thiserror",
+    "url",
     # substrate
     "frame-metadata/std",
     "frame-support",
@@ -78,5 +81,6 @@ std = [
     "ac-node-api/std",
     "ac-primitives/std",
 ]
+tungstenite-client = ["tungstenite"]
 ws-client = ["ws"]
 staking-xt = ["std"]
