--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ tungstenite = { version = "0.18.0", optional = true, features = ["native-tls"] }
 url = { verson = "2.0.0", optional = true }
 ws = { version = "0.9.2", optional = true, features = ["ssl"] }
 
+
 # Substrate dependencies
 frame-metadata = { default-features = false, git = "https://github.com/paritytech/frame-metadata", features = ["v14", "serde_full", "decode"] }
 frame-support = { optional = true, git = "https://github.com/paritytech/substrate.git", branch = "master" }
@@ -81,6 +82,6 @@ std = [
     "ac-node-api/std",
     "ac-primitives/std",
 ]
-tungstenite-client = ["tungstenite"]
+tungstenite-client = ["std", "tungstenite"]
 ws-client = ["ws"]
 staking-xt = ["std"]
