--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -10,6 +10,7 @@ codec = { package = "parity-scale-codec", version = "3.0.0", default-features = 
 hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
 scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
 serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
+serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
 
 # substrate no_std
 sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
@@ -35,6 +36,7 @@ std = [
     "hex/std",
     "scale-info/std",
     "serde/std",
+    "serde_json/std",
     # substrate no_std
     "sp-core/std",
     "sp-runtime/std",
