--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ serde = { version = "1.0.136", default-features = false, features = ["derive"] }
 serde_json = { version = "1.0.79", default-features = false }
 thiserror = { version = "1.0.30", optional = true }
 tungstenite = { version = "0.18.0", optional = true, features = ["native-tls"] }
-url = { verson = "2.0.0", optional = true }
+url = { version = "2.0.0", optional = true }
 ws = { version = "0.9.2", optional = true, features = ["ssl"] }
 
 
