--- a/node-api/Cargo.toml
+++ b/node-api/Cargo.toml
@@ -19,11 +19,14 @@ serde_json = { version = "1.0.79", default-features = false, features = ["alloc"
 frame-metadata = { default-features = false, git = "https://github.com/paritytech/frame-metadata", features = ["v14", "serde_full", "decode"] }
 sp-core = { default-features = false, features = ["full_crypto"], git = "https://github.com/paritytech/substrate.git", branch = "master" }
 sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
-sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
 
 # need to add this for `no_std`
 sp-application-crypto = { default-features = false, git = "https://github.com/paritytech/substrate.git", features = ["full_crypto"], branch = "master" }
 sp-runtime-interface = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
+
+# local
+ac-primitives = { path = "../primitives", default-features = false }
+
 
 [features]
 default = ["std"]
@@ -44,8 +47,9 @@ std = [
     "frame-metadata/std",
     "sp-core/std",
     "sp-runtime/std",
-    "sp-std/std",
     # no_std support
     "sp-application-crypto/std",
     "sp-runtime-interface/std",
+    # local
+    "ac-primitives/std",
 ]
