--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ['derive'] }
 hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
+impl-serde = { version = "0.4", default-features = false }
+primitive-types = { version = "0.12.1", default-features = false, features = ["serde_no_std", "scale-info"] }
 scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
 serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
 serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
@@ -16,8 +18,7 @@ serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
 sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
 sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
 sp-staking = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
-sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
-sp-weights = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sp-version = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
 
 # substrate std / wasm only
 frame-system = { optional = true, git = "https://github.com/paritytech/substrate.git", branch = "master" }
@@ -34,6 +35,7 @@ default = ["std"]
 std = [
     "codec/std",
     "hex/std",
+    "primitive-types/std",
     "scale-info/std",
     "serde/std",
     "serde_json/std",
@@ -41,8 +43,7 @@ std = [
     "sp-core/std",
     "sp-runtime/std",
     "sp-staking/std",
-    "sp-std/std",
-    "sp-weights/std",
+    "sp-version/std",
     # substrate std
     "frame-system",
     "pallet-assets",
