Add `submit_and_watch_extrinsic_until_success` method (#398)
* add watch until sucess method and test

extract separate functions

move trait to top

fix ci

fix no-std build serde_full

fix clippy

remove no good test

remove comment

* remove spi-io patch

* add test utils for pub export

* remove assert matches

* add unit tests

* fix taplo

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,7 +52,9 @@ ac-node-api = { path = "node-api", default-features = false }
 ac-primitives = { path = "primitives", default-features = false }
 
 [dev-dependencies]
+ac-node-api = { path = "node-api", features = ["mocks"] }
 kitchensink-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
+scale-info = { version = "2.1.1", features = ["derive"] }
 
 [features]
 default = ["std", "jsonrpsee-client"]
