--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,13 +20,11 @@ members = [
 [dependencies]
 # crates.io no_std
 codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ['derive'] }
+derive_more = { version = "0.99.5" }
 hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
 log = { version = "0.4.14", default-features = false }
 serde = { version = "1.0.136", default-features = false, features = ["derive"] }
 serde_json = { version = "1.0.79", default-features = false }
-
-#FIXME: convert back to thiserror once possible #317
-thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
 
 # crates.io std only
 url = { version = "2.0.0", optional = true }
@@ -69,7 +67,6 @@ std = [
     "log/std",
     "serde/std",
     "serde_json/std",
-    "thiserror/std",
     # crates.io std only
     "url",
     # substrate no_std
