Add staking example to CI (#433)
* rename example batch_payout to staking_batch_payout

* make it CI compatible and simplify

* add example to CI

* fix rebase changes

* fix clippy warnings

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -122,6 +122,7 @@ jobs:
           get_blocks,
           get_storage,
           print_metadata,
+          staking_batch_payout,
           sudo,
           transfer_with_tungstenite_client,
           transfer_with_ws_client,
