Provide async support for direct request/response communication  (#521)
* Only make the `request` method async without breaking external APIs

* Make all the functions async and use await

* Make futures non-optional for now

* Use the maybe_async crate to support async and sync APIs

* Fix Cargo.toml formatting

* Revert changes to `futures` crate config

* Put comments back in

* Provide two implementations of the `compose_extrinsic` macro: One with async and the other one sync

* Fix merge

* Fix taplo formatting

* Provide two functions that take advantage of async

* Extract shared logic between sync and async into a separate macro

* Fix async compilation and provide features flags

* Try again with single quotes

* Rename feature to `sync-api` and try fix to quoting issue in ci.yml

* Try yet again to make github action happy

* Set feature `sync-api` for the no_std tests

* Improve documentation

* Apply suggestions from code review

Co-authored-by: Bigna Härdi <73821294+haerdib@users.noreply.github.com>

* Fix formatting

---------

Co-authored-by: Bigna Härdi <73821294+haerdib@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,10 @@ jobs:
                 cargo build --release -p test-no-std --features primitives,
 
                 # Test for 32 bit and wasm32-unknown-unknown compatibility
-                cargo build --target wasm32-unknown-unknown --no-default-features,
+                cargo build --target wasm32-unknown-unknown --no-default-features --features sync-api,
+
+                # Test for async compilation
+                cargo build --no-default-features --features "std jsonrpsee-client",
 
                 # Clippy
                 cargo clippy --workspace --exclude test-no-std -- -D warnings,
