Check metadata hash (#776)
* Activate metadata-hash feature in kitchensink-runtime to see if we can reproduce the signing issues

* Test with a newer docker image

* Test a docker image that should still work

* Implement empty hash and deactivate metadata hash check

* Fix failing build.
- Deactivate two tests for now

* Cleanup/Remove old changes

* Introduce feature to disable the metadata-hash-check

* Fix conditional compilation

* - Disable tests when the metadata-hash-check feature is active
- Add feature to the main Cargo.toml

* Test with newer docker image

* Add feature to testing code

* Make taplo fmt happy

* Activate the metadata-hash feature per default in testing code

* Use H256 instead of byte array

* Make clippy happy by adding more clutter to the code :-(

---------

Co-authored-by: masapr <40862722+masapr@users.noreply.github.com>

--- a/examples/sync/Cargo.toml
+++ b/examples/sync/Cargo.toml
@@ -15,4 +15,4 @@ sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = 
 sp-weights = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
 
 # local deps
-substrate-api-client = { path = "../..", version = "0.17", default-features = false, features = ["tungstenite-client", "ws-client"] }
+substrate-api-client = { path = "../..", version = "0.17", default-features = false, features = ["tungstenite-client", "ws-client", "disable-metadata-hash-check"] }
