--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -47,6 +47,7 @@ default = ["std"]
 disable_target_static_assertions = [
     "sp-runtime-interface/disable_target_static_assertions",
 ]
+disable-metadata-hash-check = []
 std = [
     "codec/std",
     "primitive-types/std",
