--- a/testing/sync/Cargo.toml
+++ b/testing/sync/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ac-testing-sync"
-version = "0.4.0"
+version = "0.18.0"
 authors = ["Supercomputing Systems AG <info@scs.ch>"]
 license = "Apache-2.0"
 edition = "2021"
@@ -12,5 +12,5 @@ sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "ma
 sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
 
 # local deps
-substrate-api-client = { path = "../..", version = "0.17", default-features = false, features = ["tungstenite-client", "ws-client", "disable-metadata-hash-check"] }
-ac-keystore = { path = "../../keystore" }
+substrate-api-client = { path = "../..", version = "0.18", default-features = false, features = ["tungstenite-client", "ws-client", "disable-metadata-hash-check"] }
+ac-keystore = { path = "../../keystore", version = "0.18" }
