--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,11 +40,11 @@ serde_json = { version = "1.0.79", default-features = false }
 
 
 # crates.io std only
-url = { version = "2.0.0", optional = true }
+url = { version = "2.5", optional = true }
 
 # websocket dependent features
-jsonrpsee = { version = "0.22", optional = true, features = ["async-client", "client-ws-transport-native-tls", "jsonrpsee-types"] }
-tungstenite = { version = "0.21", optional = true, features = ["native-tls"] }
+jsonrpsee = { version = "0.24", optional = true, features = ["async-client", "client-ws-transport-tls", "jsonrpsee-types"] }
+tungstenite = { version = "0.23", optional = true, features = ["native-tls", "url"] }
 ws = { version = "0.9.2", optional = true, features = ["ssl"] }
 
 # Substrate no_std dependencies
