--- a/testing/async/Cargo.toml
+++ b/testing/async/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dev-dependencies]
 codec = { package = "parity-scale-codec", version = "3.6.1", features = ['derive'] }
 tokio = { version = "1.24", features = ["rt-multi-thread", "macros", "time"] }
-jsonrpsee = { version = "0.22", features = ["async-client", "client-ws-transport-native-tls", "jsonrpsee-types", "server"] }
+jsonrpsee = { version = "0.24", features = ["async-client", "client-ws-transport-tls", "jsonrpsee-types", "server"] }
 
 
 # Substrate dependencies
